# xra-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: model.yaml  projections.yaml
data/: params0.json  params1.json
notebooks/: ablation.ipynb  clinical_qualitative.ipynb  clinical_qualitative_comparison.ipynb  clinical_results.ipynb  more_projections_qualitative.ipynb  motion.ipynb  synthetic_results.ipynb
scripts/: demo.py  prepare_data.py  real_data_demo.py  sync.sh  test_synthetic_right.py  train_diffusion_left.py  train_diffusion_right.py  train_gan_left.py  train_gan_right.py  visualizer.py
scripts/dataset/: image2cas.sh  make_pilot.py  make_split.py  prepare_data.py  prepare_data_for_neca.py
scripts/demos/: architecture.py  clinical_visualizer.py  demo.py  make_animation.py  real_data_demo.py  synthetic_visualizer.py  visualizer.py
scripts/experiments/: get_results.sh  run_experiments.sh  test_clinical_baseline_right.py  test_clinical_right.py  test_guidance_right.py  test_synthetic_adaptive_right.py  test_synthetic_baseline_right.py  test_synthetic_right.py  test_synthetic_unet_right.py
scripts/experiments/ablation/: test_both.py  test_guidance.py  test_guidance_right.py  test_more_projections.py  (+4 more)
scripts/training/: train_diffusion_both.py  train_diffusion_left.py  train_diffusion_left_no_projections.py  train_diffusion_right.py  train_diffusion_right_no_projections.py  train_gan_both.py  train_gan_left.py  train_gan_right.py  train_unet3d_both.py  train_unet3d_left.py  train_unet3d_right.py
src/reconsnet/: config.py  train.py
(+39 files in other folders)
